fixing hero section on mobile

--- a/src/Background.css
+++ b/src/Background.css
@@ -78,7 +78,7 @@ section:nth-of-type(1) {
 
 main {
 	width: 100%;
-	max-width: 900px;
+	max-width: 1400px;
 	margin: 0 auto;
 }
 
